--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <title>Veros-shop</title>
   </head>
   <body>
+    <base href="/" />
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
